[package]
name = "behavior-bark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
lazy_static = { version = "1.5", optional = true }

[features]
default = ["serde", "tracing"]
tracing = ["lazy_static"]